Fixed issues with virtual dark mode blog cards on homepage

--- a/styles/dark-mode.css
+++ b/styles/dark-mode.css
@@ -33,12 +33,20 @@ html.casper body.dark .post-card-byline-content a {
   color: rgba(255, 255, 255, 0.75);
 }
 
+html.casper body.dark .homepage .post-card-byline-content a {
+  color: #000000;
+}
+
 html.casper body.dark .post-card-byline-content a:hover {
   color: #fff;
 }
 
 html.casper body.dark .post-card-image {
   background: var(--darkmode);
+}
+
+html.casper body.dark .homepage .post-card-title {
+  color: #000000;
 }
 
 html.casper body.dark .post-card-title {
